Avoid funky scrollbars when tooltip overflows the window.

--- a/src/core.css
+++ b/src/core.css
@@ -9,7 +9,11 @@ html {
     'Arial Unicode';
 
   background: white;
-  color: black
+  color: black;
+
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 *,
